# pyTSPA-toolbox

./: .readthedocs.yaml  README.md  pyproject.toml  requirements.txt  setup.py
Toolbox for Analyzing and Visualizing Team Sports Performance/: doing_stuff.py
docs/: requirements.txt
docs/source/: conf.py  data.rst  index.rst  metrics.rst  pyTSPA_example.rst  usage.rst  visualization.rst
pyTSPA/: __init__.py  data.py  metrics.py  visualization.py
tests/: test.py  test1.py  test_data.ipynb  test_metrics.ipynb  test_visualization.ipynb  ~$Football_ENG_2017_18.xlsx
